--- a/core/templates/core/components/sidebar.html
+++ b/core/templates/core/components/sidebar.html
@@ -45,6 +45,10 @@
                 <a href="{% url 'pm_calendar' %}" class="flex items-center gap-3 px-4 py-2 text-sm rounded-lg hover:bg-indigo-50 focus:outline-none focus:ring-2 focus:ring-indigo-600">{% trans "PM Calendar" %}</a>
                 <a href="{% url 'master_schedule_center' %}" class="flex items-center gap-3 px-4 py-2 text-sm rounded-lg hover:bg-indigo-50 focus:outline-none focus:ring-2 focus:ring-indigo-600">{% trans "Master Schedule" %}</a>
                 <a href="{% url 'pm_assignments_react' %}" class="flex items-center gap-3 px-4 py-2 text-sm rounded-lg hover:bg-indigo-50 focus:outline-none focus:ring-2 focus:ring-indigo-600">{% trans "Equipo" %}</a>
+                <a href="{% url 'assignment_hub' %}" class="flex items-center gap-3 px-4 py-2 text-sm rounded-lg hover:bg-indigo-50 focus:outline-none focus:ring-2 focus:ring-indigo-600">
+                    <i class="bi bi-people text-indigo-600"></i>
+                    <span>{% trans "Asignaciones" %}</span>
+                </a>
                 <a href="{% url 'task_list_all' %}" class="flex items-center gap-3 px-4 py-2 text-sm rounded-lg hover:bg-indigo-50 focus:outline-none focus:ring-2 focus:ring-indigo-600">
                     <i class="bi bi-list-check text-indigo-600"></i>
                     <span>{% trans "Tareas" %}</span>
